# Burgers-Turbulence

./: .gitignore  README.md  cp2.py
cp2_alt/: cp2_burgers_1d.py
cp2_alt/report/: CP2.bib  CP2.tex
cpp/: CMakeLists.txt  README.md  main.cpp  test.cpp
python/: cp2_burgers_1d.py
report/: CP2.tex
